--- a/src/app/shell/sidebar/sidebar.component.html
+++ b/src/app/shell/sidebar/sidebar.component.html
@@ -13,6 +13,8 @@
       <hr>
       <a mat-list-item routerLink="/checkin">Checkin</a>
       <hr>
+      <a mat-list-item routerLink="/luggage">Luggage</a>
+      <hr>
       <a mat-list-item routerLink="/about">About</a>
     </mat-nav-list>
   </mat-sidenav>
