--- a/src/app/domains/luggage/ui-common/luggage-card/luggage-card.component.html
+++ b/src/app/domains/luggage/ui-common/luggage-card/luggage-card.component.html
@@ -1,1 +1,15 @@
-<p>luggage-card works!</p>
+<div class="card">
+
+    <div class="card-header">
+        <h2 class="title">Luggage #{{ luggage.id  }}</h2>
+    </div>
+  
+    <div class="card-body">
+        <p>Weight: #{{ luggage.weight }}</p>
+        <p>Checked in: #{{ luggage.checkedIn }}</p>
+        <p>Remarks: #{{ luggage.remarks }}</p>
+
+    </div>
+  
+  </div>
+  
