fix: remove mfe integration

--- a/src/app/shell/sidebar/sidebar.component.html
+++ b/src/app/shell/sidebar/sidebar.component.html
@@ -15,8 +15,8 @@
       <hr>
       <a mat-list-item routerLink="/luggage">Luggage</a>
       <hr>
-      <a mat-list-item routerLink="/miles">Miles</a>
-      <hr>
+      <!-- <a mat-list-item routerLink="/miles">Miles</a>
+      <hr> -->
       <a mat-list-item routerLink="/about">About</a>
     </mat-nav-list>
   </mat-sidenav>
