--- a/src/app/domains/ticketing/ui-common/flight-filter/flight-filter.component.html
+++ b/src/app/domains/ticketing/ui-common/flight-filter/flight-filter.component.html
@@ -1,3 +1,14 @@
+<div class="form-group">
+  <label for="filterSelect">Previous Filters:</label>
+  <select [formControl]="selectedFilterControl" class="form-control" id="filterSelect">
+      <option
+          *ngFor="let filter of localStore.filters()"
+          [ngValue]="filter">
+          {{filter?.from}} - {{filter?.to}}
+      </option>
+  </select>
+</div>
+
 <form [formGroup]="inputFilterForm">
   <div class="form-group">
     <label>From:</label>
@@ -15,7 +26,7 @@
   </div>
 
   <div class="form-group">
-    <button (click)="search()" [disabled]="!inputFilterForm.valid"
+    <button (click)="localStore.triggerSearch()" [disabled]="!inputFilterForm.valid"
       class="btn btn-default">
       Search
     </button>
