--- a/src/app/domains/ticketing/feature-booking/flight-search/flight-search.component.html
+++ b/src/app/domains/ticketing/feature-booking/flight-search/flight-search.component.html
@@ -1,17 +1,38 @@
 <h2 class="title">Flight Search</h2>
 
-<app-flight-filter
-  [filter]="filter"
-  (searchTrigger)="search($event)"
->
-  <button class="btn btn-default" (click)="delay()">
-    Delay 1st Flight
-  </button>
+<form #form="ngForm">
 
-  <div *ngIf="flights.length" class="flight-filter-info">
-    {{flights.length}} flights found!
+  <div class="form-group">
+    <label>From:</label>
+    <input [(ngModel)]="from" appCity name="from" class="form-control">
   </div>
-</app-flight-filter>
+
+  <div class="alert alert-warning" *ngIf="form?.controls?.['from']?.hasError('appCity')">
+    Invalid city!
+  </div>
+
+  <div class="form-group">
+    <label>To:</label>
+    <input [(ngModel)]="to" name="to" class="form-control">
+  </div>
+  <div class="form-group">
+    <label>
+      <input [(ngModel)]="urgent" name="urgent" type="checkbox">
+      Urgent (When it's urgent it fails -- like in real life ;-))
+
+    </label>
+  </div>
+
+  <div class="form-group">
+    <button (click)="search()" [disabled]="!from || !to" class="btn btn-default">
+      Search
+    </button>
+
+    <button class="btn btn-default" (click)="delay()">
+      Delay 1st Flight
+    </button>
+  </div>
+</form>
 
 <div class="row">
   <div *ngFor="let f of flights" class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
