--- a/src/app/domains/ticketing/feature-booking/flight-search/flight-search.component.html
+++ b/src/app/domains/ticketing/feature-booking/flight-search/flight-search.component.html
@@ -4,11 +4,7 @@
 
   <div class="form-group">
     <label>From:</label>
-    <input [(ngModel)]="from" appCity name="from" class="form-control">
-  </div>
-
-  <div class="alert alert-warning" *ngIf="form?.controls?.['from']?.hasError('appCity')">
-    Invalid city!
+    <input [(ngModel)]="from" name="from" class="form-control">
   </div>
 
   <div class="form-group">
