--- a/src/app/shell/sidebar/sidebar.component.html
+++ b/src/app/shell/sidebar/sidebar.component.html
@@ -14,8 +14,9 @@
       <a mat-list-item routerLink="/checkin">Checkin</a>
       <hr>
       <a mat-list-item routerLink="/luggage">Luggage</a>
-      <hr>
-      <a mat-list-item routerLink="/miles">Miles</a>
+      <!-- Disabled Federation: -->
+      <!-- <hr> -->
+      <!-- <a mat-list-item routerLink="/miles">Miles</a> -->
       <hr>
       <a mat-list-item routerLink="/about">About</a>
     </mat-nav-list>
