--- a/src/app/domains/ticketing/feature-booking/flight-search/flight-search.component.html
+++ b/src/app/domains/ticketing/feature-booking/flight-search/flight-search.component.html
@@ -4,20 +4,16 @@
 
   <div class="form-group">
     <label>From:</label>
-    <input [(ngModel)]="from" appCity name="from" class="form-control">
-  </div>
-
-  <div class="alert alert-warning" *ngIf="form?.controls?.['from']?.hasError('appCity')">
-    Invalid city!
+    <input [ngModel]="from()" (ngModelChange)="from.set($event)" name="from" class="form-control">
   </div>
 
   <div class="form-group">
     <label>To:</label>
-    <input [(ngModel)]="to" name="to" class="form-control">
+    <input [ngModel]="to()" (ngModelChange)="to.set($event)" name="to" class="form-control">
   </div>
   <div class="form-group">
     <label>
-      <input [(ngModel)]="urgent" name="urgent" type="checkbox">
+      <input [ngModel]="urgent()" (ngModelChange)="urgent.set($event)" name="urgent" type="checkbox">
       Urgent (When it's urgent it fails -- like in real life ;-))
 
     </label>
@@ -35,9 +31,9 @@
 </form>
 
 <div class="row">
-  <div *ngFor="let f of flights" class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
-    <app-flight-card [item]="f" [(selected)]="basket[f.id]" />
+  <div *ngFor="let f of flights()" class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+    <app-flight-card [item]="f" [selected]="basket()[f.id]" (selectedChange)="updateBasket(f.id, $event)" />
   </div>
 </div>
 
-<pre>{{ basket | json }}</pre>
+<pre>{{ basket() | json }}</pre>
