--- a/src/app/domains/ticketing/feature-booking/flight-search/flight-search.component.html
+++ b/src/app/domains/ticketing/feature-booking/flight-search/flight-search.component.html
@@ -4,11 +4,7 @@
 
   <div class="form-group">
     <label>From:</label>
-    <input [ngModel]="from()" (ngModelChange)="from.set($event)"  appCity name="from" class="form-control">
-  </div>
-
-  <div class="alert alert-warning" *ngIf="form?.controls?.['from']?.hasError('appCity')">
-    Invalid city!
+    <input [ngModel]="from()" (ngModelChange)="from.set($event)"  name="from" class="form-control">
   </div>
 
   <div class="form-group">
@@ -33,6 +29,10 @@
     </button>
   </div>
 </form>
+
+<p>
+  <i>Route: {{flightRoute()}}</i>
+</p>
 
 <div class="row">
   <div *ngFor="let f of flights()" class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
