--- a/src/app/domains/ticketing/feature-booking/flight-search/flight-search.component.html
+++ b/src/app/domains/ticketing/feature-booking/flight-search/flight-search.component.html
@@ -4,23 +4,17 @@
 
   <div class="form-group">
     <label>From:</label>
-    <input [ngModel]="from()" (ngModelChange)="from.set($event)"  name="from" class="form-control">
+    <input [ngModel]="from()" (ngModelChange)="updateCriteria('from', $event)" name="from" class="form-control">
   </div>
 
   <div class="form-group">
     <label>To:</label>
-    <input [ngModel]="to()" (ngModelChange)="to.set($event)" name="to" class="form-control">
+    <input [ngModel]="to()" (ngModelChange)="updateCriteria('to', $event)" name="to" class="form-control">
   </div>
-  <div class="form-group">
-    <label>
-      <input [ngModel]="urgent()" (ngModelChange)="urgent.set($event)" name="urgent" type="checkbox">
-      Urgent (When it's urgent it fails -- like in real life ;-))
-
-    </label>
-  </div>
+  
 
   <div class="form-group">
-    <button (click)="search()" [disabled]="!from || !to" class="btn btn-default">
+    <button (click)="search()" [disabled]="!from() || !to()" class="btn btn-default">
       Search
     </button>
 
